# side_project_num1

./: README.md  requirements.txt  test.db
Backend/: .flake8  main.py  requirements.txt  test.db
Backend/api/: main.py
Backend/apis/: base.py
Backend/apis/version1/: route_general_pages.py  route_jobs.py  route_login.py
Backend/core/: config.py
Backend/db/: session.py
Backend/db/repository/: jobs.py  users.py
Backend/static/js/: autocomplete.js
Backend/templates/auth/: login.html
Backend/templates/components/: cards.html  navbar.html
Backend/templates/general_pages/: homepage.html
Backend/templates/jobs/: show_jobs_to_delete.html
Backend/templates/shared/: base.html
Backend/tests/: conftest.py  test_main.py
Backend/tests/test_routes/: test_jobs.py  test_users.py
Backend/webapps/: base.py
Backend/webapps/jobs/: route_jobs.py
Backend/webapps/users/: forms.py
fastapi_study/: README.md
fastapi_study/Backend/: .flake8  main.py  requirements.txt
fastapi_study/Backend/schemas/: users.py
fastapi_study/Backend/templates/shared/: base.html
fastapi_study/Backend/templates/users/: register.html
fastapi_study/Backend/tests/: conftest.py
fastapi_study/Backend/tests/test_routes/: test_jobs.py
fastapi_study/Backend/webapps/: base.py
fastapi_study/Backend/webapps/auth/: route_login.py
fastapi_study/Backend/webapps/users/: route_users.py
project/: pyproject.toml
project/app/: main.py
project/app/core/: config.py
project/app/db/: session.py
project/app/tests/: conftest.py
project/app/tests/utils/: user.py
